# Quadratic-Visualizer-Plugin

./: .gitignore  CMakeLists.txt  README.md  bashbuild.bat
cmake/: cpm.cmake
plugin/: CMakeLists.txt
plugin/include/VisualizerPlugin/: Animation.h  Display.h  PluginEditor.h  PluginProcessor.h  Shape.h  State.h
plugin/source/: Animation.cpp  Display.cpp  PluginEditor.cpp  PluginProcessor.cpp  Shape.cpp  State.cpp  main.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
